Revert "[ALL] 하루스터디 v1.1.2 배포 👏  (#555)"
This reverts commit c7fab750b9f18dd52a827e9a6efb38a230e971b3.