@@ -9,96 +9,72 @@ import harustudy.backend.progress.dto.ParticipateStudyRequest;
 import harustudy.backend.progress.dto.PomodoroProgressResponse;
 import harustudy.backend.progress.dto.PomodoroProgressesResponse;
 import harustudy.backend.progress.exception.PomodoroProgressNotFoundException;
-import harustudy.backend.progress.exception.ProgressNotBelongToStudyException;
+import harustudy.backend.progress.exception.ProgressNotBelongToRoomException;
 import harustudy.backend.progress.repository.PomodoroProgressRepository;
-import harustudy.backend.study.domain.PomodoroStudy;
-import harustudy.backend.study.repository.PomodoroStudyRepository;
+import harustudy.backend.room.domain.PomodoroRoom;
+import harustudy.backend.room.repository.PomodoroRoomRepository;
 import jakarta.annotation.Nullable;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+@Service
 @RequiredArgsConstructor
 @Transactional
-@Service
 public class PomodoroProgressService {
 
     private final MemberRepository memberRepository;
     private final PomodoroProgressRepository pomodoroProgressRepository;
-    private final PomodoroStudyRepository pomodoroStudyRepository;
+    private final PomodoroRoomRepository pomodoroRoomRepository;
 
-    @Transactional(readOnly = true)
     public PomodoroProgressResponse findPomodoroProgress(
             AuthMember authMember, Long studyId, Long progressId
     ) {
-        PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
+        PomodoroRoom pomodoroRoom = pomodoroRoomRepository.findByIdIfExists(studyId);
         PomodoroProgress pomodoroProgress = pomodoroProgressRepository.findByIdIfExists(progressId);
-        validateProgressIsRelatedWith(pomodoroProgress, authMember, pomodoroStudy);
+        validateProgressIsRelatedWith(pomodoroProgress, authMember, pomodoroRoom);
         return PomodoroProgressResponse.from(pomodoroProgress);
     }
 
-    // TODO: 임시용이므로 이후에 제거
-    public PomodoroProgressesResponse tempFindPomodoroProgressWithFilter(
-            AuthMember authMember, Long studyId, Long memberId
-    ) {
-        PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
-        if (Objects.isNull(memberId)) {
-            validateEverParticipated(authMember, pomodoroStudy);
-            return getPomodoroProgressesResponseWithoutMemberFilter(pomodoroStudy);
-        }
-        Member member = memberRepository.findByIdIfExists(memberId);
-        validateIsSameMemberId(authMember, memberId);
-        return tempGetPomodoroProgressesResponseWithMemberFilter(pomodoroStudy, member);
-    }
-
-    // TODO: 임시용이므로 이후에 제거
-    private PomodoroProgressesResponse tempGetPomodoroProgressesResponseWithMemberFilter(
-            PomodoroStudy pomodoroStudy, Member member) {
-        return pomodoroProgressRepository.findByPomodoroStudyAndMember(pomodoroStudy, member)
-                .map(PomodoroProgressResponse::from)
-                .map(response -> PomodoroProgressesResponse.from(List.of(response)))
-                .orElseGet(() -> PomodoroProgressesResponse.from(null));
-    }
-
     // TODO: 동적쿼리로 변경(memberId 유무에 따른 분기처리)
-    @Transactional(readOnly = true)
     public PomodoroProgressesResponse findPomodoroProgressWithFilter(
             AuthMember authMember, Long studyId, @Nullable Long memberId
     ) {
-        PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
+        PomodoroRoom pomodoroRoom = pomodoroRoomRepository.findByIdIfExists(studyId);
         if (Objects.isNull(memberId)) {
-            validateEverParticipated(authMember, pomodoroStudy);
-            return getPomodoroProgressesResponseWithoutMemberFilter(pomodoroStudy);
+            validateEverParticipated(authMember, pomodoroRoom);
+            return getPomodoroProgressesResponseWithoutMemberFilter(pomodoroRoom);
         }
         Member member = memberRepository.findByIdIfExists(memberId);
         validateIsSameMemberId(authMember, memberId);
-        return getPomodoroProgressesResponseWithMemberFilter(pomodoroStudy, member);
+        return getPomodoroProgressesResponseWithMemberFilter(pomodoroRoom, member);
     }
 
-    private void validateEverParticipated(AuthMember authMember, PomodoroStudy pomodoroStudy) {
+    private void validateEverParticipated(AuthMember authMember, PomodoroRoom pomodoroRoom) {
         Member member = memberRepository.findByIdIfExists(authMember.id());
-        pomodoroProgressRepository.findByPomodoroStudyAndMember(pomodoroStudy, member)
+        pomodoroProgressRepository.findByPomodoroRoomAndMember(pomodoroRoom, member)
                 .orElseThrow(AuthorizationException::new);
     }
 
     private PomodoroProgressesResponse getPomodoroProgressesResponseWithoutMemberFilter(
-            PomodoroStudy pomodoroStudy
+            PomodoroRoom pomodoroRoom
     ) {
         List<PomodoroProgressResponse> responses =
-                pomodoroProgressRepository.findByPomodoroStudy(pomodoroStudy)
+                pomodoroProgressRepository.findByPomodoroRoom(pomodoroRoom)
                         .stream()
                         .map(PomodoroProgressResponse::from)
-                        .toList();
+                        .collect(Collectors.toList());
         return PomodoroProgressesResponse.from(responses);
     }
 
     private PomodoroProgressesResponse getPomodoroProgressesResponseWithMemberFilter(
-            PomodoroStudy pomodoroStudy, Member member
+            PomodoroRoom pomodoroRoom, Member member
     ) {
         PomodoroProgressResponse response =
-                pomodoroProgressRepository.findByPomodoroStudyAndMember(pomodoroStudy, member)
+                pomodoroProgressRepository.findByPomodoroRoomAndMember(pomodoroRoom, member)
                         .map(PomodoroProgressResponse::from)
                         .orElseThrow(PomodoroProgressNotFoundException::new);
         return PomodoroProgressesResponse.from(List.of(response));
@@ -106,19 +82,18 @@ public class PomodoroProgressService {
 
     public void proceed(AuthMember authMember, Long studyId, Long progressId) {
         PomodoroProgress pomodoroProgress = pomodoroProgressRepository.findByIdIfExists(progressId);
-        PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
+        PomodoroRoom pomodoroRoom = pomodoroRoomRepository.findByIdIfExists(studyId);
 
-        validateProgressIsRelatedWith(pomodoroProgress, authMember, pomodoroStudy);
+        validateProgressIsRelatedWith(pomodoroProgress, authMember, pomodoroRoom);
         pomodoroProgress.proceed();
     }
 
-    public Long participateStudy(AuthMember authMember, Long studyId,
-            ParticipateStudyRequest request) {
+    public Long participateStudy(AuthMember authMember, Long studyId, ParticipateStudyRequest request) {
         Member member = memberRepository.findByIdIfExists(request.memberId());
         validateIsSameMemberId(authMember, request.memberId());
-        PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
-        PomodoroProgress pomodoroProgress = new PomodoroProgress(pomodoroStudy, member, request.nickname());
-        pomodoroProgress.generateContents(pomodoroStudy.getTotalCycle());
+        PomodoroRoom pomodoroRoom = pomodoroRoomRepository.findByIdIfExists(studyId);
+        PomodoroProgress pomodoroProgress = new PomodoroProgress(pomodoroRoom, member, request.nickname());
+        pomodoroProgress.generateContents(pomodoroRoom.getTotalCycle());
         PomodoroProgress saved = pomodoroProgressRepository.save(pomodoroProgress);
         return saved.getId();
     }
@@ -130,10 +105,10 @@ public class PomodoroProgressService {
     }
 
     private void validateProgressIsRelatedWith(
-            PomodoroProgress pomodoroProgress, AuthMember authMember, PomodoroStudy pomodoroStudy
+            PomodoroProgress pomodoroProgress, AuthMember authMember, PomodoroRoom pomodoroRoom
     ) {
         validateMemberOwns(pomodoroProgress, authMember);
-        validateProgressIsIncludedIn(pomodoroStudy, pomodoroProgress);
+        validateProgressIsIncludedIn(pomodoroRoom, pomodoroProgress);
     }
 
     private void validateMemberOwns(PomodoroProgress pomodoroProgress, AuthMember authMember) {
@@ -143,18 +118,18 @@ public class PomodoroProgressService {
         }
     }
 
-    private void validateProgressIsIncludedIn(PomodoroStudy pomodoroStudy,
+    private void validateProgressIsIncludedIn(PomodoroRoom pomodoroRoom,
             PomodoroProgress pomodoroProgress) {
-        if (pomodoroProgress.isNotIncludedIn(pomodoroStudy)) {
-            throw new ProgressNotBelongToStudyException();
+        if (pomodoroProgress.isNotIncludedIn(pomodoroRoom)) {
+            throw new ProgressNotBelongToRoomException();
         }
     }
 
     public void deleteProgress(AuthMember authMember, Long studyId, Long progressId) {
-        PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
-        validateEverParticipated(authMember, pomodoroStudy);
+        PomodoroRoom pomodoroRoom = pomodoroRoomRepository.findByIdIfExists(studyId);
+        validateEverParticipated(authMember, pomodoroRoom);
         PomodoroProgress pomodoroProgress = pomodoroProgressRepository.findByIdIfExists(progressId);
-        validateProgressIsRelatedWith(pomodoroProgress, authMember, pomodoroStudy);
+        validateProgressIsRelatedWith(pomodoroProgress, authMember, pomodoroRoom);
         pomodoroProgressRepository.delete(pomodoroProgress);
     }
 }
